@@ -60,7 +60,6 @@ import java.security.NoSuchAlgorithmException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.central.client.CentralClientConstants.APPLICATION_JSON;
 import static org.ballerinalang.central.client.CentralClientConstants.BALLERINA_DEV_CENTRAL;
@@ -73,6 +72,7 @@ import static org.ballerinalang.central.client.CentralClientConstants.RESOLVED_R
 import static org.ballerinalang.central.client.CentralClientConstants.SHA256;
 import static org.ballerinalang.central.client.CentralClientConstants.SHA256_ALGORITHM;
 import static org.ballerinalang.central.client.CentralClientConstants.STAGING_REPO;
+import static org.ballerinalang.central.client.CentralClientConstants.TEST_MODE_ACTIVE;
 import static org.ballerinalang.central.client.CentralClientConstants.UPDATE_INTERVAL_MILLIS;
 
 /**
@@ -86,6 +86,7 @@ public class Utils {
             System.getenv(BALLERINA_STAGE_CENTRAL));
     public static final boolean SET_BALLERINA_DEV_CENTRAL = Boolean.parseBoolean(
             System.getenv(BALLERINA_DEV_CENTRAL));
+    public static final boolean SET_TEST_MODE_ACTIVE = Boolean.parseBoolean(System.getenv(TEST_MODE_ACTIVE));
 
     private Utils() {
     }
@@ -102,7 +103,7 @@ public class Utils {
      *
      * @param balaDownloadResponse http response for downloading the bala file
      * @param pkgPathInBalaCache   package path in bala cache,
-     *                             <user.home>.ballerina/bala_cache/<org-name>/<pkg-name>
+     *                             {@literal <user.home>.ballerina/bala_cache/<org-name>/<pkg-name>}
      * @param pkgOrg               package org
      * @param pkgName              package name
      * @param isNightlyBuild       is nightly build
@@ -162,12 +163,13 @@ public class Utils {
                 downloadBody.ifPresent(ResponseBody::close);
                 throw new PackageAlreadyExistsException(
                         logFormatter.formatLog("package already exists in the home repository: " +
-                                balaCacheWithPkgPath.toString()));
+                                balaCacheWithPkgPath.toString()), validPkgVersion);
             }
         } catch (IOException e) {
             downloadBody.ifPresent(ResponseBody::close);
             throw new PackageAlreadyExistsException(
-                    logFormatter.formatLog("error accessing bala : " + balaCacheWithPkgPath.toString()));
+                    logFormatter.formatLog("error accessing bala : " + balaCacheWithPkgPath.toString()),
+                    validPkgVersion);
         }
 
         // Create the following temp path
@@ -227,7 +229,7 @@ public class Utils {
      * @return bala file name
      */
     private static String getBalaFileName(String contentDisposition, String balaFile) {
-        if (contentDisposition != null && !contentDisposition.equals("")) {
+        if (contentDisposition != null && !contentDisposition.isEmpty()) {
             return contentDisposition.substring("attachment; filename=".length());
         } else {
             return balaFile;
@@ -457,7 +459,7 @@ public class Utils {
 
         try (FileSystem zipFileSystem = FileSystems.newFileSystem(zipURI, new HashMap<>())) {
             Path packageRoot = zipFileSystem.getPath("/");
-            List<Path> paths = Files.walk(packageRoot).filter(path -> path != packageRoot).collect(Collectors.toList());
+            List<Path> paths = Files.walk(packageRoot).filter(path -> path != packageRoot).toList();
             for (Path path : paths) {
                 Path destPath = balaFileDestPath.resolve(packageRoot.relativize(path).toString());
                 // Handle overwriting existing bala
