@@ -46,7 +46,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Matcher;
-import java.util.stream.Collectors;
 
 /**
  * Represents a request for a Ballerina AST Modify.
@@ -174,7 +173,7 @@ public class BallerinaTreeModifyUtil {
         List<TextEdit> edits = new ArrayList<>();
         List<ASTModification> importModifications = Arrays.stream(astModifications)
                 .filter(ASTModification::isImport)
-                .collect(Collectors.toList());
+                .toList();
         for (ASTModification importModification : importModifications) {
             if (importExist(unusedSymbolsVisitor, importModification)) {
                 continue;
