@@ -41,7 +41,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Tests {@link org.ballerinalang.langserver.LSPackageLoader}.
@@ -99,7 +98,7 @@ public class LSPackageLoaderTest extends AbstractLSTest {
                 LSPackageLoader.ModuleInfo moduleInfo = getPackages(REMOTE_PROJECTS,
                         context.workspace(), context.languageServercontext()).stream()
                         .map(LSPackageLoader.ModuleInfo::new)
-                        .collect(Collectors.toList()).get(0);
+                        .toList().get(0);
                 this.remoteRepoPackages.add(moduleInfo);
                 return List.of(moduleInfo);
             }
