@@ -43,10 +43,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.ballerina.projects.util.ProjectConstants.BLANG_COMPILED_JAR_EXT;
+import static io.ballerina.projects.util.ProjectConstants.RESOURCE_DIR_NAME;
 import static io.ballerina.projects.util.ProjectUtils.getThinJarFileName;
 
 /**
@@ -85,8 +85,8 @@ public class TestBirAndJarCache {
         int numOfModules = currentPackage.moduleIds().size();
         TestCompilationCache testCompilationCache = testCompCacheFactory.compilationCache();
         Assert.assertEquals(testCompilationCache.birCachedCount, numOfModules);
-        // numOfModules * 2 : This includes testable jars as well
-        Assert.assertEquals(testCompilationCache.jarCachedCount, numOfModules);
+        // numOfModules * 2 : This includes testable jars as well, including the resources.jar
+        Assert.assertEquals(testCompilationCache.jarCachedCount, numOfModules + 1);
 
         Stream<Path> pathStream = Files.find(cacheDirPath, 100,
                 (path, fileAttributes) -> !Files.isDirectory(path) &&
@@ -95,7 +95,7 @@ public class TestBirAndJarCache {
 
         List<String> foundPaths = pathStream
                 .map(path -> path.getFileName().toString())
-                .collect(Collectors.toList());
+                .toList();
         for (ModuleId moduleId : currentPackage.moduleIds()) {
             Module module = currentPackage.module(moduleId);
             ModuleName moduleName = module.moduleName();
@@ -104,6 +104,7 @@ public class TestBirAndJarCache {
                                                 module.descriptor().version());
             Assert.assertTrue(foundPaths.contains(jarName + BLANG_COMPILED_JAR_EXT));
         }
+        Assert.assertTrue(foundPaths.contains(RESOURCE_DIR_NAME + BLANG_COMPILED_JAR_EXT));
     }
 
     @Test
